kubernetes-prometheus/prometheus/prom-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus-core-ums.delhivery.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: prometheusservice
          servicePort: 9090
status:
  loadBalancer:
    ingress:
    - {}
